[tool.poetry]
name = "corporate-struct"
version = "0.1.0"
description = ""
authors = ["g-despot <ivan.g.despot@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
pymgclient = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
